--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Política de Privacidade - VerbaDiem</title>
+  <title>Privacy Policy - VerbaDiem</title>
   <style>
     body {
       font-family: Arial, Helvetica, sans-serif;
@@ -18,32 +18,31 @@
   </style>
 </head>
 <body>
-  <h1>Política de Privacidade</h1>
+  <h1>Privacy Policy</h1>
 
-  <p>Esta Política de Privacidade descreve como o aplicativo <strong>VerbaDiem</strong>, desenvolvido por <strong>Beatriz Crepaldi</strong>, lida com as informações dos usuários.</p>
+  <p>This Privacy Policy explains how the <strong>VerbaDiem</strong> app, developed by <strong>Beatriz Crepaldi</strong>, handles user information.</p>
 
-  <h2>1. Coleta de Informações</h2>
-  <p>O aplicativo <strong>não coleta, armazena ou compartilha dados pessoais</strong> dos usuários. Nenhuma informação identificável é solicitada ou processada.</p>
+  <h2>1. Information Collection</h2>
+  <p>The application <strong>does not collect, store, or share any personal data</strong> from its users. No identifiable information is requested or processed by the app.</p>
 
-  <h2>2. Anúncios</h2>
-  <p>O aplicativo exibe anúncios fornecidos pelo <strong>Google AdMob</strong>. O AdMob pode utilizar cookies e identificadores para personalizar a experiência do usuário e exibir anúncios relevantes. 
-  Para mais informações sobre como o Google usa os dados de anúncios, acesse: 
+  <h2>2. Advertising</h2>
+  <p>The app displays advertisements provided by <strong>Google AdMob</strong>. AdMob may use cookies and device identifiers to personalize ad experiences and deliver relevant ads.  
+  For more information about how Google uses data in advertising, please visit:  
   <a href="https://policies.google.com/technologies/ads" target="_blank">https://policies.google.com/technologies/ads</a>.</p>
 
-  <h2>3. Uso de Permissões</h2>
-  <p>O aplicativo <strong>não utiliza</strong> câmera, microfone, GPS, login ou quaisquer outras permissões sensíveis do dispositivo.</p>
+  <h2>3. App Permissions</h2>
+  <p>The app <strong>does not use</strong> the camera, microphone, GPS, login, or any other sensitive permissions on the device.</p>
 
-  <h2>4. Público-alvo</h2>
-  <p>O aplicativo <strong>não é voltado para crianças</strong> e não contém conteúdo infantil.</p>
+  <h2>4. Target Audience</h2>
+  <p>This app is <strong>not intended for children</strong> and does not contain child-directed content.</p>
 
-  <h2>5. Alterações nesta Política</h2>
-  <p>Esta Política de Privacidade pode ser atualizada periodicamente. Recomendamos que o usuário revise esta página para estar ciente de eventuais modificações.</p>
+  <h2>5. Changes to This Policy</h2>
+  <p>This Privacy Policy may be updated from time to time. Users are encouraged to review this page periodically for any changes.</p>
 
-  <h2>6. Contato</h2>
-  <p>Em caso de dúvidas sobre esta Política de Privacidade, entre em contato com a desenvolvedora pelo e-mail: 
+  <h2>6. Contact</h2>
+  <p>If you have any questions about this Privacy Policy, please contact the developer at:  
   <a href="mailto:beatrizcrepaldi.dev@gmail.com">beatrizcrepaldi.dev@gmail.com</a>.</p>
 
-  <p><em>Última atualização: novembro de 2025</em></p>
+  <p><em>Last updated: November 2025</em></p>
 </body>
 </html>
-
