--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
   <h2>6. Contact</h2>
   <p>If you have any questions about this Privacy Policy, please contact the developer at:  
-  <a href="mailto:beatrizcrepaldi.dev@gmail.com">beatrizcrepaldi.dev@gmail.com</a>.</p>
+  <a href="mailto:beecrepaldi@gmail.com">beecrepaldi@gmail.com</a>.</p>
 
   <p><em>Last updated: November 2025</em></p>
 </body>
