--- a/index.html
+++ b/index.html
@@ -44,5 +44,9 @@
   <a href="mailto:beecrepaldi@gmail.com">beecrepaldi@gmail.com</a>.</p>
 
   <p><em>Last updated: November 2025</em></p>
+  <footer style="margin-top:40px;font-size:0.9em;color:#777;">
+  © 2025 Beatriz Crepaldi. All rights reserved.
+</footer>
+
 </body>
 </html>
