--- a/index.html
+++ b/index.html
@@ -1,51 +1,104 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Privacy Policy - VerbaDiem</title>
+  <title>Política de Privacidade - VerbaDiem</title>
   <style>
     body {
-      font-family: Arial, Helvetica, sans-serif;
-      margin: 40px;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+      margin: 0 auto;
+      padding: 20px;
       line-height: 1.6;
       color: #333;
+      background-color: #f9f9f9;
       max-width: 800px;
     }
-    h1, h2 {
-      color: #2a6db0;
+    h1, h2, h3 {
+      color: #0d47a1;
+    }
+    h1 {
+        border-bottom: 2px solid #e0e0e0;
+        padding-bottom: 10px;
+    }
+    a {
+        color: #1565c0;
+        text-decoration: none;
+    }
+    a:hover {
+        text-decoration: underline;
+    }
+    strong {
+        font-weight: 600;
+    }
+    .container {
+        background-color: #fff;
+        padding: 20px 40px;
+        border-radius: 8px;
+        box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
+    footer {
+        margin-top: 40px;
+        font-size: 0.9em;
+        color: #777;
+        text-align: center;
     }
   </style>
 </head>
 <body>
-  <h1>Privacy Policy</h1>
 
-  <p>This Privacy Policy explains how the <strong>VerbaDiem</strong> app, developed by <strong>Beatriz Crepaldi</strong>, handles user information.</p>
+<div class="container">
+  <h1>Política de Privacidade do VerbaDiem</h1>
+  <p><strong>Última atualização:</strong> 25 de Julho de 2024</p>
+  <p>Esta Política de Privacidade descreve como o aplicativo <strong>VerbaDiem</strong> ("nós", "nosso"), desenvolvido por <strong>Beatriz Crepaldi</strong>, lida com suas informações. A sua privacidade é importante para nós.</p>
 
-  <h2>1. Information Collection</h2>
-  <p>The application <strong>does not collect, store, or share any personal data</strong> from its users. No identifiable information is requested or processed by the app.</p>
+  <h2>1. Dados que Não Coletamos</h2>
+  <p>O VerbaDiem foi projetado para respeitar sua privacidade. Não exigimos que você crie uma conta e <strong>não coletamos, armazenamos ou compartilhamos quaisquer dados de identificação pessoal</strong>, como seu nome, endereço de e-mail ou localização.</p>
+  
+  <h2>2. Dados Armazenados Localmente no Seu Dispositivo</h2>
+  <p>Para que o aplicativo funcione corretamente e salve seu progresso, algumas informações são armazenadas diretamente no seu dispositivo, utilizando o armazenamento local do navegador. Esses dados incluem:</p>
+  <ul>
+    <li>Seu progresso de aprendizado (palavras aprendidas, XP, nível).</li>
+    <li>Sua ofensiva (streak) atual e a mais longa.</li>
+    <li>Conquistas desbloqueadas.</li>
+    <li>Suas configurações de idioma.</li>
+    <li>Coleções de palavras que você criou.</li>
+  </ul>
+  <p><strong>Esses dados permanecem exclusivamente no seu dispositivo</strong> e não são transmitidos para nós ou para quaisquer servidores de terceiros sob nosso controle.</p>
 
-  <h2>2. Advertising</h2>
-  <p>The app displays advertisements provided by <strong>Google AdMob</strong>. AdMob may use cookies and device identifiers to personalize ad experiences and deliver relevant ads.  
-  For more information about how Google uses data in advertising, please visit:  
+  <h2>3. Serviços de Terceiros</h2>
+  <p>Para fornecer todos os recursos do aplicativo, o VerbaDiem utiliza os seguintes serviços de terceiros. Cada serviço tem suas próprias políticas de privacidade sobre como lidam com os dados.</p>
+
+  <h3>3.1. API Google Gemini</h3>
+  <p>O núcleo da experiência de aprendizado do VerbaDiem é alimentado pela API Gemini do Google. Para gerar palavras do dia, etimologias, frases de exemplo e conduzir as sessões de prática guiada, o aplicativo envia certas informações não pessoais para o Google. Isso inclui:</p>
+  <ul>
+    <li>As preferências de idioma nativo e alvo que você selecionou.</li>
+    <li>A palavra do dia que está sendo aprendida.</li>
+    <li>Frases que você digita durante as sessões de prática para avaliação.</li>
+  </ul>
+  <p>Essas informações são processadas pelo Google para fornecer as respostas da IA. Recomendamos que você revise a <a href="https://policies.google.com/privacy" target="_blank">Política de Privacidade do Google</a> para entender como eles gerenciam os dados.</p>
+
+  <h3>3.2. Google AdSense</h3>
+  <p>Para apoiar o desenvolvimento do aplicativo, exibimos anúncios fornecidos pelo <strong>Google AdSense</strong>. O AdSense pode usar cookies e identificadores de dispositivo para coletar dados não pessoais e exibir anúncios mais relevantes para você.
+  <p>Para mais informações sobre como o Google utiliza os dados em seus produtos de publicidade, por favor, visite:  
   <a href="https://policies.google.com/technologies/ads" target="_blank">https://policies.google.com/technologies/ads</a>.</p>
 
-  <h2>3. App Permissions</h2>
-  <p>The app <strong>does not use</strong> the camera, microphone, GPS, login, or any other sensitive permissions on the device.</p>
+  <h2>4. Permissões do Aplicativo</h2>
+  <p>O aplicativo <strong>não solicita acesso</strong> à sua câmera, microfone, localização (GPS), contatos ou quaisquer outras permissões sensíveis do dispositivo.</p>
 
-  <h2>4. Target Audience</h2>
-  <p>This app is <strong>not intended for children</strong> and does not contain child-directed content.</p>
+  <h2>5. Privacidade Infantil</h2>
+  <p>O VerbaDiem <strong>não é destinado a crianças menores de 13 anos</strong>. Não coletamos intencionalmente informações de identificação pessoal de crianças. Se você é pai ou responsável e acredita que seu filho nos forneceu informações, entre em contato conosco para que possamos tomar as medidas necessárias.</p>
 
-  <h2>5. Changes to This Policy</h2>
-  <p>This Privacy Policy may be updated from time to time. Users are encouraged to review this page periodically for any changes.</p>
+  <h2>6. Alterações a Esta Política de Privacidade</h2>
+  <p>Podemos atualizar nossa Política de Privacidade de tempos em tempos. Recomendamos que você revise esta página periodicamente para quaisquer alterações. Notificaremos sobre quaisquer alterações postando a nova Política de Privacidade nesta página.</p>
 
-  <h2>6. Contact</h2>
-  <p>If you have any questions about this Privacy Policy, please contact the developer at:  
+  <h2>7. Contato</h2>
+  <p>Se você tiver alguma dúvida sobre esta Política de Privacidade, entre em contato com a desenvolvedora em:  
   <a href="mailto:beecrepaldi@gmail.com">beecrepaldi@gmail.com</a>.</p>
+</div>
 
-  <p><em>Last updated: November 2025</em></p>
-  <footer style="margin-top:40px;font-size:0.9em;color:#777;">
-  © 2025 Beatriz Crepaldi. All rights reserved.
+<footer>
+  © 2024 Beatriz Crepaldi. Todos os direitos reservados.
 </footer>
 
 </body>
