--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Política de Privacidade - VerbaDiem</title>
+  <title>Privacy Policy - VerbaDiem</title>
   <style>
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
@@ -48,57 +48,57 @@
 <body>
 
 <div class="container">
-  <h1>Política de Privacidade do VerbaDiem</h1>
-  <p><strong>Última atualização:</strong> 25 de Julho de 2024</p>
-  <p>Esta Política de Privacidade descreve como o aplicativo <strong>VerbaDiem</strong> ("nós", "nosso"), desenvolvido por <strong>Beatriz Crepaldi</strong>, lida com suas informações. A sua privacidade é importante para nós.</p>
+  <h1>VerbaDiem Privacy Policy</h1>
+  <p><strong>Last Updated:</strong> July 25, 2024</p>
+  <p>This Privacy Policy describes how the <strong>VerbaDiem</strong> application ("we," "us," or "our"), developed by <strong>Beatriz Crepaldi</strong>, handles your information. Your privacy is important to us.</p>
 
-  <h2>1. Dados que Não Coletamos</h2>
-  <p>O VerbaDiem foi projetado para respeitar sua privacidade. Não exigimos que você crie uma conta e <strong>não coletamos, armazenamos ou compartilhamos quaisquer dados de identificação pessoal</strong>, como seu nome, endereço de e-mail ou localização.</p>
+  <h2>1. Data We Do Not Collect</h2>
+  <p>VerbaDiem is designed to respect your privacy. We do not require you to create an account, and we <strong>do not collect, store, or share any personally identifiable data</strong>, such as your name, email address, or location.</p>
   
-  <h2>2. Dados Armazenados Localmente no Seu Dispositivo</h2>
-  <p>Para que o aplicativo funcione corretamente e salve seu progresso, algumas informações são armazenadas diretamente no seu dispositivo, utilizando o armazenamento local do navegador. Esses dados incluem:</p>
+  <h2>2. Data Stored Locally on Your Device</h2>
+  <p>For the app to function correctly and save your progress, some information is stored directly on your device using the browser's local storage. This data includes:</p>
   <ul>
-    <li>Seu progresso de aprendizado (palavras aprendidas, XP, nível).</li>
-    <li>Sua ofensiva (streak) atual e a mais longa.</li>
-    <li>Conquistas desbloqueadas.</li>
-    <li>Suas configurações de idioma.</li>
-    <li>Coleções de palavras que você criou.</li>
+    <li>Your learning progress (learned words, XP, level).</li>
+    <li>Your current and longest streak.</li>
+    <li>Unlocked achievements.</li>
+    <li>Your language settings.</li>
+    <li>Word collections you have created.</li>
   </ul>
-  <p><strong>Esses dados permanecem exclusivamente no seu dispositivo</strong> e não são transmitidos para nós ou para quaisquer servidores de terceiros sob nosso controle.</p>
+  <p><strong>This data remains exclusively on your device</strong> and is not transmitted to us or any third-party servers under our control.</p>
 
-  <h2>3. Serviços de Terceiros</h2>
-  <p>Para fornecer todos os recursos do aplicativo, o VerbaDiem utiliza os seguintes serviços de terceiros. Cada serviço tem suas próprias políticas de privacidade sobre como lidam com os dados.</p>
+  <h2>3. Third-Party Services</h2>
+  <p>To provide all app features, VerbaDiem utilizes the following third-party services. Each service has its own privacy policies regarding how they handle data.</p>
 
-  <h3>3.1. API Google Gemini</h3>
-  <p>O núcleo da experiência de aprendizado do VerbaDiem é alimentado pela API Gemini do Google. Para gerar palavras do dia, etimologias, frases de exemplo e conduzir as sessões de prática guiada, o aplicativo envia certas informações não pessoais para o Google. Isso inclui:</p>
+  <h3>3.1. Google Gemini API</h3>
+  <p>The core of the VerbaDiem learning experience is powered by Google's Gemini API. To generate daily words, etymologies, example sentences, and conduct guided practice sessions, the app sends certain non-personal information to Google. This includes:</p>
   <ul>
-    <li>As preferências de idioma nativo e alvo que você selecionou.</li>
-    <li>A palavra do dia que está sendo aprendida.</li>
-    <li>Frases que você digita durante as sessões de prática para avaliação.</li>
+    <li>The native and target language preferences you have selected.</li>
+    <li>The daily word being learned.</li>
+    <li>Sentences you type during practice sessions for evaluation.</li>
   </ul>
-  <p>Essas informações são processadas pelo Google para fornecer as respostas da IA. Recomendamos que você revise a <a href="https://policies.google.com/privacy" target="_blank">Política de Privacidade do Google</a> para entender como eles gerenciam os dados.</p>
+  <p>This information is processed by Google to provide the AI's responses. We recommend you review the <a href="https://policies.google.com/privacy" target="_blank">Google Privacy Policy</a> to understand how they manage data.</p>
 
   <h3>3.2. Google AdSense</h3>
-  <p>Para apoiar o desenvolvimento do aplicativo, exibimos anúncios fornecidos pelo <strong>Google AdSense</strong>. O AdSense pode usar cookies e identificadores de dispositivo para coletar dados não pessoais e exibir anúncios mais relevantes para você.
-  <p>Para mais informações sobre como o Google utiliza os dados em seus produtos de publicidade, por favor, visite:  
+  <p>To support the development of the app, we display advertisements provided by <strong>Google AdSense</strong>. AdSense may use cookies and device identifiers to collect non-personal data and serve ads more relevant to you.</p>
+  <p>For more information on how Google uses data in its advertising products, please visit:  
   <a href="https://policies.google.com/technologies/ads" target="_blank">https://policies.google.com/technologies/ads</a>.</p>
 
-  <h2>4. Permissões do Aplicativo</h2>
-  <p>O aplicativo <strong>não solicita acesso</strong> à sua câmera, microfone, localização (GPS), contatos ou quaisquer outras permissões sensíveis do dispositivo.</p>
+  <h2>4. App Permissions</h2>
+  <p>The application <strong>does not request access</strong> to your camera, microphone, location (GPS), contacts, or any other sensitive device permissions.</p>
 
-  <h2>5. Privacidade Infantil</h2>
-  <p>O VerbaDiem <strong>não é destinado a crianças menores de 13 anos</strong>. Não coletamos intencionalmente informações de identificação pessoal de crianças. Se você é pai ou responsável e acredita que seu filho nos forneceu informações, entre em contato conosco para que possamos tomar as medidas necessárias.</p>
+  <h2>5. Children's Privacy</h2>
+  <p>VerbaDiem is <strong>not intended for children under the age of 13</strong>. We do not knowingly collect personally identifiable information from children. If you are a parent or guardian and you believe your child has provided us with information, please contact us so we can take necessary action.</p>
 
-  <h2>6. Alterações a Esta Política de Privacidade</h2>
-  <p>Podemos atualizar nossa Política de Privacidade de tempos em tempos. Recomendamos que você revise esta página periodicamente para quaisquer alterações. Notificaremos sobre quaisquer alterações postando a nova Política de Privacidade nesta página.</p>
+  <h2>6. Changes to This Privacy Policy</h2>
+  <p>We may update our Privacy Policy from time to time. We encourage you to review this page periodically for any changes. We will notify you of any changes by posting the new Privacy Policy on this page.</p>
 
-  <h2>7. Contato</h2>
-  <p>Se você tiver alguma dúvida sobre esta Política de Privacidade, entre em contato com a desenvolvedora em:  
+  <h2>7. Contact Us</h2>
+  <p>If you have any questions about this Privacy Policy, please contact the developer at:  
   <a href="mailto:beecrepaldi@gmail.com">beecrepaldi@gmail.com</a>.</p>
 </div>
 
 <footer>
-  © 2024 Beatriz Crepaldi. Todos os direitos reservados.
+  © 2024 Beatriz Crepaldi. All rights reserved.
 </footer>
 
 </body>
